<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_entry_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <include layout="@layout/toolbar_layout" />

  <TextView
      android:id="@+id/record_entry"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="72dp"
      android:text="@string/record_entry"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/edit_title"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:autofillHints="@string/title_label"
      android:ems="10"

      android:hint="@string/title_label"
      android:inputType="text"
      android:minHeight="48dp"
      android:textAlignment="center"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/record_entry" />

  <Button
      android:id="@+id/btn_entry_date"
      style="?android:buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="48dp"
      android:layout_marginTop="8dp"
      android:contentDescription="Select Date"
      android:text="@string/date"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_title" />
  <EditText
      android:id="@+id/edit_location"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:hint="Enter Location"
      android:inputType="text"
      android:textAlignment="center"
      app:layout_constraintTop_toBottomOf="@+id/btn_entry_date"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="8dp" />


  <Button
      android:id="@+id/btn_location"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Open in Maps"
      app:layout_constraintTop_toBottomOf="@+id/edit_location"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="8dp" />



  <Button
      android:id="@+id/btn_start_time"
      style="?android:buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/start_time"
      android:contentDescription="Select Start Time"
      app:layout_constraintEnd_toStartOf="@+id/textView"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_location" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/to"
      app:layout_constraintBottom_toBottomOf="@+id/btn_start_time"
      app:layout_constraintEnd_toStartOf="@+id/btn_end_time"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/btn_start_time"
      app:layout_constraintTop_toTopOf="@+id/btn_start_time" />

  <Button
      android:id="@+id/btn_end_time"
      style="?android:buttonBarButtonStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/end_time"
    app:layout_constraintBottom_toBottomOf="@+id/textView"
    app:layout_constraintEnd_toEndOf="parent"
      android:contentDescription="Select End Time"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/textView"
    app:layout_constraintTop_toTopOf="@+id/textView" />

  <Button
      android:id="@+id/btn_save"
      android:layout_marginTop="16dp"
      android:layout_width="wrap_content"
      android:layout_height="48dp"
      android:layout_marginEnd="16dp"
      android:text="@string/save_label"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />
<!--  <ImageButton-->
<!--      android:id="@+id/btn_share_entry"-->
<!--      android:layout_width="wrap_content"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:src="@drawable/ic_share"-->
<!--      android:contentDescription="Share Entry"-->
<!--      android:layout_alignParentEnd="true"-->
<!--      android:layout_marginEnd="16dp"-->
<!--      android:layout_marginTop="16dp"-->
<!--      android:background="?attr/selectableItemBackground" />-->
<!--  <ImageButton-->
<!--      android:id="@+id/btn_delete_entry"-->
<!--      android:layout_width="wrap_content"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:layout_marginTop="16dp"-->
<!--      android:src="@drawable/ic_delete"-->
<!--      android:contentDescription="@string/delete_entry"-->
<!--      app:layout_constraintEnd_toEndOf="parent"-->
<!--      app:layout_constraintTop_toTopOf="@+id/btn_save"-->
<!--      android:background="?attr/selectableItemBackground"/>-->

  <ImageButton
      android:id="@+id/btn_share_entry"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:background="?attr/selectableItemBackground"
      android:contentDescription="Share Entry"
      android:src="@drawable/ic_share"
      app:layout_constraintEnd_toStartOf="@+id/btn_delete_entry"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageButton
      android:id="@+id/btn_delete_entry"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:layout_alignBottom="@id/btn_share_entry"
      android:background="?attr/selectableItemBackground"
      android:contentDescription="@string/delete_entry"
      android:src="@drawable/ic_delete"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>